code functions. plain HTML

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <h1>The Ternary Traveler</h1>
     <article class="output">
-
+        <section id="formContainer"></section>
+        <section id="cardContainer"></section>
     </article>
 
     <script src="bundle.js"></script>
