added styling. fully functional

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Ternary Traveler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Special+Elite" rel="stylesheet">
 </head>
-<body>
-    <h1>The Ternary Traveler</h1>
-    <article class="output">
-        <section id="formContainer"></section>
-        <section id="cardContainer"></section>
-    </article>
 
+<body>
+    <section id="mainContainer">
+        <h1>The Ternary Traveler</h1>
+        <article class="output">
+            <section id="formContainer"></section>
+            <section id="cardContainer"></section>
+        </article>
+    </section>
+    <footer>&copy;2019 Farrellkat</footer>
     <script src="bundle.js"></script>
 </body>
+
 </html>
